[metadata]
package_name = pysky
description = A wrapper to parse the EUCLID NASA science centre sky background model in python
long_description = A wrapper to parse the EUCLID NASA science centre sky background model in python
author = Sarah Caddy
author_email = sarah.caddy@hdr.edu.au
license = MIT
url = ""
edit_on_github = True
github_project = Physarah
version = 0.0.dev
minimum_python_version = 3.7
